--- a/pages/tab.html
+++ b/pages/tab.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/index.f7626f62.css">
-  <title>Органічна хімія</title>
+  <title>Document</title>
 </head>
 
 <body class="tab__body">
@@ -36,16 +36,20 @@
     </ul>
     <a href="/pages/settings.html" id="profileCircle" class="profile-circle"></a>
   </div>
+  
+  <script>document.addEventListener("DOMContentLoaded", ()=>{
+    const profileButton = document.querySelector("#profileCircle");
+    const updateProfileButton = ()=>{
+        const userProfile = localStorage.getItem("userProfile");
+        if (userProfile) {
+            const user = JSON.parse(userProfile);
+            profileButton.textContent = user.name[0].toUpperCase();
+        } else profileButton.style.display = "none";
+    };
+    updateProfileButton();
+});
 
-  <div id="lessonsContainer">
-  </div>
-
-  <div id="lessonModal">
-    <div id="lessonContent">
-    </div>
-  </div>
-
-  <script src="/pages/lessons2.eaebb463.js"></script> 
-<script src="/lessons2.56c72aff.js"></script></body>
+</script>
+<script src="/tab.c6f26226.js"></script></body>
 
 </html>
