--- a/pages/settings.html
+++ b/pages/settings.html
@@ -1,76 +1,1 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/index.f7626f62.css">
-  <title>Налаштування акаунта</title>
-</head>
-<body class="tab__body">
-  <div class="tab">
-    <a href="/index.html"><span class="tab__logo__text">ED</span></a>
-    <a href="/pages/dashboard.html">
-      <img class="tab__mainicon" src="/dashboard.84449c88.svg" alt="">
-    </a>
-    <ul class="tab__list">
-      <li class="tab__list__item">
-        <a href="/pages/courses.html">
-          <img class="tab__list__item__svg" src="/school.21124949.svg" alt="Школа">
-        </a>
-      </li>
-      <li class="tab__list__item">
-        <a href="/pages/lessons.html">
-          <img class="tab__list__item__svg" src="/emoji_objects.076f501b.svg" alt="Емоджі об'єкти">
-        </a>
-      </li>
-      <li class="tab__list__item">
-        <a href="/pages/rewiews.html">
-          <img class="tab__list__item__svg" src="/chat.8d9b58d9.svg" alt="Чат">
-        </a>
-      </li>
-    </ul>
-    <button id="notificationsButton">Повідомлення</button>
-  </div>
-
-  <div class="profile-settings">
-    <h1 class="settingsTitle">Налаштування профілю</h1>
-    <div class="profile-name" id="profileName">Ім'я користувача</div>
-    <form id="settingsForm">
-      <label for="name">Ім'я</label>
-      <input type="text" id="name" name="name" required="">
-  
-      <label for="surname">Прізвище</label>
-      <input type="text" id="surname" name="surname" required="">
-  
-      <label for="password">Пароль</label>
-      <input type="password" id="password" name="password" required="">
-  
-      <button type="submit">Зберегти зміни</button>
-      <p style="color: red; margin-top: 20px">Наразі у нас немає власних серверів, тому профілі користувачів можуть бути не захищеними від можливих загроз. Якщо виникли проблеми, будь ласка, напишіть у повідомленнях в налаштуваннях.</p>
-    </form>
-  </div>
-  
-
-  <div id="notificationsModal" class="modal">
-    <div class="modal-content notifications-settings">
-      <div class="modal-header">
-        <h2>Повідомлення</h2>
-        <button id="closeNotificationsModal">&times;</button>
-      </div>
-      <div class="modal-body">
-        <form id="notificationForm">
-          <label for="notificationMessage">Повідомлення</label>
-          <input type="text" id="notificationMessage" name="notificationMessage" required="">
-          <button type="submit">Відправити повідомлення</button>
-          <p style="color: red; margin-top: 20px">Наразі у нас немає власних серверів, тому повідомлення можуть бути не захищеними від можливих загроз.</p>
-        </form>
-        <div id="notificationsList">
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script src="/pages/settings.1309efa1.js" defer="">
-</script>
-</body>
-</html>
+<!DOCTYPE html><html lang="uk"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="/mge/index.8e3b01ed.css"><title>Налаштування акаунта</title></head><body class="tab__body"> <div class="tab"> <a href="/mge/index.html"><span class="tab__logo__text">ED</span></a> <a href="/mge/pages/dashboard.html"> <img class="tab__mainicon" src="/mge/dashboard.c1601abe.svg" alt> </a> <ul class="tab__list"> <li class="tab__list__item"> <a href="/mge/pages/courses.html"> <img class="tab__list__item__svg" src="/mge/school.185c1a10.svg" alt="Школа"> </a> </li> <li class="tab__list__item"> <a href="/mge/pages/lessons.html"> <img class="tab__list__item__svg" src="/mge/emoji_objects.b46bab92.svg" alt="Емоджі об'єкти"> </a> </li> <li class="tab__list__item"> <a href="/mge/pages/rewiews.html"> <img class="tab__list__item__svg" src="/mge/chat.6da958e5.svg" alt="Чат"> </a> </li> </ul> <button id="notificationsButton">Повідомлення</button> </div> <div class="profile-settings"> <h1 class="settingsTitle">Налаштування профілю</h1> <div class="profile-name" id="profileName">Ім'я користувача</div> <form id="settingsForm"> <label for="name">Ім'я</label> <input type="text" id="name" name="name" required> <label for="surname">Прізвище</label> <input type="text" id="surname" name="surname" required> <label for="password">Пароль</label> <input type="password" id="password" name="password" required> <button type="submit">Зберегти зміни</button> <p style="color:red;margin-top:20px">Наразі у нас немає власних серверів, тому профілі користувачів можуть бути не захищеними від можливих загроз. Якщо виникли проблеми, будь ласка, напишіть у повідомленнях в налаштуваннях.</p> </form> </div> <div id="notificationsModal" class="modal"> <div class="modal-content notifications-settings"> <div class="modal-header"> <h2>Повідомлення</h2> <button id="closeNotificationsModal">&times;</button> </div> <div class="modal-body"> <form id="notificationForm"> <label for="notificationMessage">Повідомлення</label> <input type="text" id="notificationMessage" name="notificationMessage" required> <button type="submit">Відправити повідомлення</button> <p style="color:red;margin-top:20px">Наразі у нас немає власних серверів, тому повідомлення можуть бути не захищеними від можливих загроз.</p> </form> <div id="notificationsList"> </div> </div> </div> </div> <script src="/mge/pages/settings.fdbc0abc.js" type="module"></script> </body></html>
