--- a/pages/tab.html
+++ b/pages/tab.html
@@ -1,1 +1,108 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"><link rel="stylesheet" href="/mge/index.b25f4397.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"><title>Document</title></head><body class="tab__body"> <div class="tab"> <a href="/mge/index.html"><span class="tab__logo__text">ED</span></a> <a href="/mge/pages/dashboard.html"> <img class="tab__mainicon" src="/mge/dashboard.c1601abe.svg" alt> </a> <ul class="tab__list"> <li class="tab__list__item"> <a href="/mge/pages/courses.html"> <img class="tab__list__item__svg" src="/mge/school.185c1a10.svg" alt="School"> </a> </li> <li class="tab__list__item"> <a href="/mge/pages/lessons.html"> <img class="tab__list__item__svg" src="/mge/emoji_objects.b46bab92.svg" alt="Emoji Objects"> </a> </li> <li class="tab__list__item"> <a href="/mge/pages/rewiews.html"> <img class="tab__list__item__svg" src="/mge/chat.6da958e5.svg" alt="Chat"> </a> </li> </ul> <a href="/mge/pages/settings.html" id="profileCircle" class="profile-circle"></a> </div> <div class="sidebar"> <div class="season-icon"> <i id="seasonIcon" class="fas"></i> </div> <div class="current-date"> <span id="date"></span> </div> </div> <script>document.addEventListener("DOMContentLoaded",()=>{let e=document.querySelector("#profileCircle"),t=document.querySelector("#date"),a=document.querySelector("#seasonIcon");(()=>{let t=localStorage.getItem("userProfile");if(t){let a=JSON.parse(t);e.textContent=a.name[0].toUpperCase()}else e.style.display="none"})(),(()=>{let e=new Date,a=["неділя","понеділок","вівторок","середа","четвер","пʼятниця","субота"][e.getDay()],n=e.getDate(),l=["січня","лютого","березня","квітня","травня","червня","липня","серпня","вересня","жовтня","листопада","грудня"][e.getMonth()],o=e.getFullYear(),u=`\u{421}\u{44C}\u{43E}\u{433}\u{43E}\u{434}\u{43D}\u{456} ${a} ${n} ${l} ${o}`;t.textContent=u})(),(()=>{let e;let t=new Date().getMonth()+1;e=t>=3&&t<=5?"fa-seedling":t>=6&&t<=8?"fa-sun":t>=9&&t<=11?"fa-leaf":"fa-snowflake",a.className=`fas ${e}`})()});</script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/index.f7626f62.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Document</title>
+  </head>
+
+  <body class="tab__body">
+    <div class="tab">
+      <a href="/index.html"><span class="tab__logo__text">ED</span></a>
+      <a href="/pages/dashboard.html">
+        <img class="tab__mainicon" src="/dashboard.84449c88.svg" alt="">
+      </a>
+      <ul class="tab__list">
+        <li class="tab__list__item">
+          <a href="/pages/courses.html">
+            <img class="tab__list__item__svg" src="/school.21124949.svg" alt="School">
+          </a>
+        </li>
+        <li class="tab__list__item">
+          <a href="/pages/lessons.html">
+            <img class="tab__list__item__svg" src="/emoji_objects.076f501b.svg" alt="Emoji Objects">
+          </a>
+        </li>
+        <li class="tab__list__item">
+          <a href="/pages/rewiews.html">
+            <img class="tab__list__item__svg" src="/chat.8d9b58d9.svg" alt="Chat">
+          </a>
+        </li>
+      </ul>
+      <a href="/pages/settings.html" id="profileCircle" class="profile-circle"></a>
+    </div>
+
+    <div class="sidebar">
+      <div class="season-icon">
+        <i id="seasonIcon" class="fas"></i>
+      </div>
+      <div class="current-date">
+        <span id="date"></span>
+      </div>
+    </div>
+
+    <script>document.addEventListener("DOMContentLoaded", ()=>{
+    const profileButton = document.querySelector("#profileCircle");
+    const dateElement = document.querySelector("#date");
+    const seasonIcon = document.querySelector("#seasonIcon");
+    const updateProfileButton = ()=>{
+        const userProfile = localStorage.getItem("userProfile");
+        if (userProfile) {
+            const user = JSON.parse(userProfile);
+            profileButton.textContent = user.name[0].toUpperCase();
+        } else profileButton.style.display = "none";
+    };
+    const updateDate = ()=>{
+        const dayNames = [
+            "\u043D\u0435\u0434\u0456\u043B\u044F",
+            "\u043F\u043E\u043D\u0435\u0434\u0456\u043B\u043E\u043A",
+            "\u0432\u0456\u0432\u0442\u043E\u0440\u043E\u043A",
+            "\u0441\u0435\u0440\u0435\u0434\u0430",
+            "\u0447\u0435\u0442\u0432\u0435\u0440",
+            "\u043F\u02BC\u044F\u0442\u043D\u0438\u0446\u044F",
+            "\u0441\u0443\u0431\u043E\u0442\u0430"
+        ];
+        const monthNames = [
+            "\u0441\u0456\u0447\u043D\u044F",
+            "\u043B\u044E\u0442\u043E\u0433\u043E",
+            "\u0431\u0435\u0440\u0435\u0437\u043D\u044F",
+            "\u043A\u0432\u0456\u0442\u043D\u044F",
+            "\u0442\u0440\u0430\u0432\u043D\u044F",
+            "\u0447\u0435\u0440\u0432\u043D\u044F",
+            "\u043B\u0438\u043F\u043D\u044F",
+            "\u0441\u0435\u0440\u043F\u043D\u044F",
+            "\u0432\u0435\u0440\u0435\u0441\u043D\u044F",
+            "\u0436\u043E\u0432\u0442\u043D\u044F",
+            "\u043B\u0438\u0441\u0442\u043E\u043F\u0430\u0434\u0430",
+            "\u0433\u0440\u0443\u0434\u043D\u044F"
+        ];
+        const date = new Date();
+        const weekday = dayNames[date.getDay()];
+        const day = date.getDate();
+        const month = monthNames[date.getMonth()];
+        const year = date.getFullYear();
+        const formattedDate = `\u{421}\u{44C}\u{43E}\u{433}\u{43E}\u{434}\u{43D}\u{456} ${weekday} ${day} ${month} ${year}`;
+        dateElement.textContent = formattedDate;
+    };
+    const updateSeasonIcon = ()=>{
+        const month = new Date().getMonth() + 1;
+        let iconClass;
+        if (month >= 3 && month <= 5) iconClass = "fa-seedling";
+        else if (month >= 6 && month <= 8) iconClass = "fa-sun";
+        else if (month >= 9 && month <= 11) iconClass = "fa-leaf";
+        else iconClass = "fa-snowflake";
+        seasonIcon.className = `fas ${iconClass}`;
+    };
+    updateProfileButton();
+    updateDate();
+    updateSeasonIcon();
+});
+
+</script>
+  <script src="/tab.c6f26226.js"></script></body>
+</html>
